src/core/Claroline/PluginBundle/Tests/stub/plugin/extension/Invalid/UnloadableBundleClass5/InvalidUnloadableBundleClass5.php
<?php

namespace Invalid\UnloadableBundleClass5;

use Claroline\PluginBundle\AbstractType\ClarolineExtension;

abstract class InvalidUnloadableBundleClass5 extends ClarolineExtension
{
    /**
     * Invalid because it cannot be instantiated
     */
}